--- a/00-HTML-CSS-basics/home.html
+++ b/00-HTML-CSS-basics/home.html
@@ -25,10 +25,10 @@
     <nav class="navigation">
       <h1>Show Menu</h1>
     </nav>
-    <header class="column2" >
+    <header class="column" >
       <h1>Showcase</h1>
     </header>
-    <article class="column3">
+    <article class="column">
       <p>Incredible Types is a curated collection and showcase of outstanding typography and design from around the world. 
         We currently have 426 pieces of inspirational design in our showcase,
          from 432 creatives and studios from 51 different countries.</p>
